--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 .hero_section {
     width: 100%;
     height: 120vh; 
-    background: url("images/hero_bg.jpg") no-repeat center center;
+    background: url("/images/hero_bg.jpg") no-repeat center center;
     background-size: cover;
     display: flex;
     align-items: center;
